--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -174,6 +174,32 @@ nfpms:
 
     bindir: /usr/local/bin
 
+    # Package replacement settings
+    replaces:
+      - mpesa-cli-old
+    conflicts:
+      - mpesa-cli-old
+
+    # Pre/post install scripts for clean upgrades
+    scripts:
+      preinstall: |
+        # Remove any old versions that might conflict
+        if command -v mpesa-cli >/dev/null 2>&1; then
+          OLD_VERSION=$(mpesa-cli --version 2>/dev/null | head -n1 | cut -d' ' -f3 || echo "unknown")
+          echo "Found existing mpesa-cli version: $OLD_VERSION"
+          echo "Preparing to upgrade to {{ .Version }}"
+        fi
+      postinstall: |
+        # Ensure the new binary is in PATH
+        echo "mpesa-cli {{ .Version }} installed successfully"
+        echo "Location: /usr/local/bin/mpesa-cli"
+        # Refresh shell completions
+        if [ -f /etc/bash_completion.d/mpesa-cli ]; then
+          echo "Bash completions installed"
+        fi
+      preremove: |
+        echo "Removing mpesa-cli {{ .Version }}"
+
     contents:
       - src: completions/mpesa-cli.bash
         dst: /etc/bash_completion.d/mpesa-cli
